Improvement: command and process

--- a/Test/TestSpace/CMakeLists.txt
+++ b/Test/TestSpace/CMakeLists.txt
@@ -8,6 +8,7 @@ TARGET
 SOURCES 
     TestKernel/TestVariable.cpp
     TestKernel/TestCommand.cpp
+    TestKernel/TestProcess.cpp
 TARGETS
     SpaceKernel
 )
