General: change Module structure

--- a/Share/SKernel/SModule/CMakeLists.txt
+++ b/Share/SKernel/SModule/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required (VERSION 3.8)
 # target
 add_library(ShareKernelModule STATIC
-	MProcessTransform.cpp
-	MProcessYpsilon.cpp
+	#MTransform.cpp
+	MYpsilon.cpp
 )
 # includes
 target_include_directories(ShareKernelModule PUBLIC
