--- a/Test/TestSpace/CMakeLists.txt
+++ b/Test/TestSpace/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required (VERSION 3.10)
 # 
 add_gtests(
 TARGET 
-    TestKernel 
+    TestSpaceKernel 
 SOURCES 
     TestKernel/TestVariable.cpp
     TestKernel/TestCommand.cpp
