General: change inputs

--- a/Share/SModule/CMakeLists.txt
+++ b/Share/SModule/CMakeLists.txt
@@ -1,18 +1,17 @@
 cmake_minimum_required (VERSION 3.8)
 # target
-add_library(ShareModule STATIC
+add_library(ShareModule INTERFACE
 	#MTransform.cpp
-	MYpsilon.cpp
+	#MSpliter.cpp
 )
 # includes
-target_include_directories(ShareModule PUBLIC
+target_include_directories(ShareModule INTERFACE
 	.
 )
 # target dependencies
 target_link_libraries(ShareModule 
-PRIVATE 
+INTERFACE 
 	ShareKernel
-PUBLIC
 	SpaceMonitor
 	SpaceResource
 	ShareConnector
