--- a/Test/TestShare/CMakeLists.txt
+++ b/Test/TestShare/CMakeLists.txt
@@ -1,12 +1,24 @@
 cmake_minimum_required (VERSION 3.10)
 #
-# add
+# add test for share kernel 
 # 
 add_gtests(
 TARGET 
     TestShareKernel
 SOURCES
     TestKernel/TestModule.cpp
-TARGETS
+DEPENDS
     ShareModule
+)
+#
+# add test for interface
+#
+add_gtests(
+TARGET 
+    TestShareInterface
+SOURCES
+    TestInterface/TestMachine.cpp
+DEPENDS
+    ShareModule
+    ShareInterface
 )
