--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,6 +69,9 @@
         "utility": "cpp",
         "valarray": "cpp",
         "variant": "cpp",
-        "algorithm": "cpp"
-    }
+        "algorithm": "cpp",
+        "map": "cpp",
+        "regex": "cpp"
+    },
+    "python.pythonPath": "/usr/bin/python3"
 }
