--- a/Test/TestShare/CMakeLists.txt
+++ b/Test/TestShare/CMakeLists.txt
@@ -1,7 +1,18 @@
 cmake_minimum_required (VERSION 3.10)
-#
+# ---------------------------------------------------------
+# add test for connector
+# ---------------------------------------------------------
+add_gtests(
+TARGET 
+    TestShareConnector
+SOURCES
+    TestConnector/TestDecodedMessageUDP.cpp
+DEPENDS
+    ShareConnector
+)
+# ---------------------------------------------------------
 # add test for share kernel 
-# 
+# ---------------------------------------------------------
 add_gtests(
 TARGET 
     TestShareKernel
@@ -10,9 +21,9 @@ SOURCES
 DEPENDS
     ShareModule
 )
-#
+# ---------------------------------------------------------
 # add test for interface
-#
+# ---------------------------------------------------------
 add_gtests(
 TARGET 
     TestShareInterface
