added test for container.Nunber

--- a/Test/TestSpace/CMakeLists.txt
+++ b/Test/TestSpace/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 3.10)
-#
+# ---------------------------------------------------------
 # add kernel test 
-# 
+# ---------------------------------------------------------
 add_gtests(
 TARGET 
     TestSpaceKernel 
@@ -10,12 +10,13 @@ SOURCES
     TestKernel/TestCommand.cpp
     TestKernel/TestProcess.cpp
     TestKernel/TestAddress.cpp
+    TestKernel/TestContainer.cpp
 DEPENDS
     SpaceKernel
 )
-#
+# ---------------------------------------------------------
 # add kelnel test 
-# 
+# ---------------------------------------------------------
 add_gtests(
 TARGET 
     TestSpaceResource 
