--- a/Space/SResource/CMakeLists.txt
+++ b/Space/SResource/CMakeLists.txt
@@ -1,23 +1,26 @@
 cmake_minimum_required (VERSION 3.8)
+# ---------------------------------------------------------
 # platform dependencies ${includes} and ${sources}
+# ---------------------------------------------------------
 if(true)
 	# linux folder for core objects
 	add_subdirectory(SLinux)
 endif()
-
-message("--------------_>" ${sources})
+# ---------------------------------------------------------
 # SpaceShare target
+# ---------------------------------------------------------
 add_library(SpaceResource STATIC ${sources})
-# SpaceShare includes
+# includes
 target_include_directories(SpaceResource 
 PUBLIC
 	${CMAKE_CURRENT_LIST_DIR}	
 PRIVATE
 	${includes}
 )
-# SpaceShare dependencies
+# dependencies
 target_link_libraries(SpaceResource 
-PRIVATE 
+PRIVATE
+	${links}
 	SpaceKernel
 	SpaceMonitor
 	SpaceResourceLinux
