update STask and SEventResource

--- a/Space/SKernel/CMakeLists.txt
+++ b/Space/SKernel/CMakeLists.txt
@@ -1,9 +1,17 @@
 cmake_minimum_required (VERSION 3.8)
-# folder for core objects
-add_subdirectory(SLinux)
-# SpaceShare target
+# ---------------------------------------------------------
+# platform dependencies ${includes} and ${sources}
+# ---------------------------------------------------------
+if(true)
+	# linux folder for core objects
+	add_subdirectory(SLinux)
+endif()
+# ---------------------------------------------------------
+# SpaceKernel target
+# ---------------------------------------------------------
 add_library(SpaceKernel 
 STATIC
+    ${sources}
 	SAddress.cpp
 	SContainer.cpp
 	SLog.cpp
@@ -11,7 +19,9 @@ STATIC
 # includes
 target_include_directories(SpaceKernel 
 PUBLIC
-	.
+	${CMAKE_CURRENT_LIST_DIR}	
+PRIVATE
+	${includes}
 )
 # target dependencies
 target_link_libraries(SpaceKernel 
