--- a/Test/TestSpace/CMakeLists.txt
+++ b/Test/TestSpace/CMakeLists.txt
@@ -34,6 +34,7 @@ add_gtests(
 TARGET 
     TestSpaceMonitor 
 SOURCES 
+    TestMonitor/TestResourceMonitor.cpp
     TestMonitor/TestRoadMonitor.cpp
 DEPENDS
     SpaceResource
