--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -93,7 +93,9 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "resumable": "cpp",
+        "set": "cpp"
     },
     "python.pythonPath": "/usr/bin/python3"
 }
