--- a/Test/TestSpace/CMakeLists.txt
+++ b/Test/TestSpace/CMakeLists.txt
@@ -14,6 +14,7 @@ SOURCES
     TestKernel/TestFrame.cpp
 DEPENDS
     SpaceKernel
+    SpaceHelper
 )
 # ---------------------------------------------------------
 # add resource test 
@@ -41,18 +42,6 @@ DEPENDS
     SpaceResource
     SpaceMonitor
     SpaceKernel
-)
-# ---------------------------------------------------------
-# add temporary
-# ---------------------------------------------------------
-add_gtests(
-TARGET 
-    TestTemporary 
-SOURCES 
-    TestKernel/TestFrame.cpp
-INCLUDES
-    ../../Space/SKernel
-    ../../Space/SHelper
 )
 # ---------------------------------------------------------
 # end
