space kernel structure update

--- a/Space/SKernel/SLinux/CMakeLists.txt
+++ b/Space/SKernel/SLinux/CMakeLists.txt
@@ -1,23 +1,10 @@
 cmake_minimum_required (VERSION 3.8)
-# SpaceShare target
-add_library(SpaceKernelLinux STATIC
-	SMonitorHandler.cpp
-)
-# includes
-target_include_directories(SpaceKernelLinux 
-PUBLIC
-	.
-)
-#dependencies
-target_link_libraries(SpaceKernelLinux
-PUBLIC 
-	pthread
-	SpaceKernel
-	SpaceMonitorLinux
-	SpaceResourceLinux
-)
 # ---------------------------------------------------------
-# linux 
+# linux - private implement 
+# ---------------------------------------------------------
+add_subdirectory(SImplement)
+# ---------------------------------------------------------
+# linux - interface 
 # ---------------------------------------------------------
 # include directories
 set(includes 
@@ -34,3 +21,6 @@ set(sources
 set(links  
 	PARENT_SCOPE
 )
+# ---------------------------------------------------------
+# end
+# ---------------------------------------------------------
