--- a/Space/SKernel/SLinux/CMakeLists.txt
+++ b/Space/SKernel/SLinux/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required (VERSION 3.8)
 # ---------------------------------------------------------
-# linux - private implement 
+# linux - kernel 
 # ---------------------------------------------------------
 add_subdirectory(SKernel)
 # ---------------------------------------------------------
@@ -15,6 +15,7 @@ set(includes
 set(sources  
 	${CMAKE_CURRENT_LIST_DIR}/SMonitor.cpp
 	${CMAKE_CURRENT_LIST_DIR}/STask.cpp
+	${CMAKE_CURRENT_LIST_DIR}/SLog.cpp
 	PARENT_SCOPE
 )
 # link libraries
