--- a/Space/SMonitor/SLinux/CMakeLists.txt
+++ b/Space/SMonitor/SLinux/CMakeLists.txt
@@ -14,6 +14,7 @@ target_link_libraries(SpaceMonitorLinux
 INTERFACE 
 	SpaceKernel
 	SpaceMonitor
-	SpaceKernelLinux
-	SpaceResourceLinux
 )
+# ---------------------------------------------------------
+# End
+# ---------------------------------------------------------
