--- a/Test/TestShare/CMakeLists.txt
+++ b/Test/TestShare/CMakeLists.txt
@@ -9,6 +9,7 @@ SOURCES
     TestConnector/TestDecodedMessageUDP.cpp
 DEPENDS
     ShareConnector
+    SpaceHelper
 )
 # ---------------------------------------------------------
 # add test for share kernel 
