--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,33 +1,20 @@
 {
-    "cmake.buildDirectory": "${workspaceRoot}/Build",
     "files.associations": {
-        "string": "cpp",
-        "sstream": "cpp",
-        "any": "cpp",
         "array": "cpp",
         "atomic": "cpp",
-        "strstream": "cpp",
         "*.tcc": "cpp",
         "bitset": "cpp",
         "cctype": "cpp",
-        "cfenv": "cpp",
         "chrono": "cpp",
-        "cinttypes": "cpp",
         "clocale": "cpp",
         "cmath": "cpp",
-        "codecvt": "cpp",
-        "complex": "cpp",
         "condition_variable": "cpp",
-        "csetjmp": "cpp",
-        "csignal": "cpp",
         "cstdarg": "cpp",
-        "cstddef": "cpp",
         "cstdint": "cpp",
         "cstdio": "cpp",
         "cstdlib": "cpp",
         "cstring": "cpp",
         "ctime": "cpp",
-        "cuchar": "cpp",
         "cwchar": "cpp",
         "cwctype": "cpp",
         "deque": "cpp",
@@ -37,12 +24,8 @@
         "unordered_set": "cpp",
         "vector": "cpp",
         "exception": "cpp",
-        "filesystem": "cpp",
-        "memory_resource": "cpp",
-        "string_view": "cpp",
         "fstream": "cpp",
         "functional": "cpp",
-        "future": "cpp",
         "initializer_list": "cpp",
         "iomanip": "cpp",
         "iosfwd": "cpp",
@@ -56,49 +39,15 @@
         "optional": "cpp",
         "ostream": "cpp",
         "ratio": "cpp",
-        "scoped_allocator": "cpp",
-        "shared_mutex": "cpp",
+        "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
+        "string_view": "cpp",
         "system_error": "cpp",
         "thread": "cpp",
         "type_traits": "cpp",
         "tuple": "cpp",
-        "typeindex": "cpp",
         "typeinfo": "cpp",
-        "utility": "cpp",
-        "valarray": "cpp",
-        "variant": "cpp",
-        "algorithm": "cpp",
-        "map": "cpp",
-        "regex": "cpp",
-        "ios": "cpp",
-        "iterator": "cpp",
-        "locale": "cpp",
-        "random": "cpp",
-        "xthread": "cpp",
-        "xfacet": "cpp",
-        "xhash": "cpp",
-        "xiosbase": "cpp",
-        "xlocale": "cpp",
-        "xlocbuf": "cpp",
-        "xlocinfo": "cpp",
-        "xlocmes": "cpp",
-        "xlocmon": "cpp",
-        "xlocnum": "cpp",
-        "xloctime": "cpp",
-        "xmemory": "cpp",
-        "xmemory0": "cpp",
-        "xstddef": "cpp",
-        "xstring": "cpp",
-        "xtr1common": "cpp",
-        "xtree": "cpp",
-        "xutility": "cpp",
-        "resumable": "cpp",
-        "set": "cpp",
-        "execution": "cpp",
-        "queue": "cpp",
-        "stack": "cpp"
-    },
-    "python.pythonPath": "/usr/bin/python3"
+        "utility": "cpp"
+    }
 }
