added test local resource

--- a/Test/TestSpace/CMakeLists.txt
+++ b/Test/TestSpace/CMakeLists.txt
@@ -24,6 +24,7 @@ TARGET
     TestSpaceResource 
 SOURCES 
     TestResource/TestFileResource.cpp
+    TestResource/TestLocalResource.cpp
     TestResource/TestRemoteResource.cpp
 DEPENDS
     SpaceResource
