update SFrame -> fix TestResource

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,7 @@
         "filesystem": "cpp",
         "regex": "cpp",
         "scoped_allocator": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "string": "cpp"
     }
 }
