--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -29,5 +29,6 @@ add_gtests(TARGET TestSample SOURCES TestSample.cpp)
 #
 # Tests subdirectories
 #
+add_subdirectory(TestLegacy)
 add_subdirectory(TestShare)
 add_subdirectory(TestSpace)
