--- a/Space/SKernel/CMakeLists.txt
+++ b/Space/SKernel/CMakeLists.txt
@@ -29,4 +29,8 @@ PUBLIC
 	${links}
 	SpaceResource
 	SpaceMonitor
+	SpaceHelper
 )
+# ---------------------------------------------------------
+# End
+# ---------------------------------------------------------
