added linux ResourceMediator

--- a/Space/SResource/SLinux/CMakeLists.txt
+++ b/Space/SResource/SLinux/CMakeLists.txt
@@ -1,4 +1,11 @@
 cmake_minimum_required (VERSION 3.8)
+# ---------------------------------------------------------
+# linux - kernel 
+# ---------------------------------------------------------
+add_subdirectory(SKernel)
+# ---------------------------------------------------------
+# linux - interface 
+# ---------------------------------------------------------
 # include directories
 set(includes 
 	${CMAKE_CURRENT_LIST_DIR}
@@ -14,6 +21,10 @@ set(sources
 	PARENT_SCOPE
 )
 # link libraries
-set(links  
+set(links
+	SpaceResourceLinux
 	PARENT_SCOPE
 )
+# ---------------------------------------------------------
+# end
+# ---------------------------------------------------------
